# bdns_portal

./: .env.example  .gitignore  .project  Dockerfile.frontend  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  install.sh  main.py  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_organo_nivel_norm.py  003_add_convocatoria_etl_columns.py  0593883f1a85_agregar_catalogo_forma_juridica.py  79fea5d8f0a2_particionar_tabla_concesion.py  bd5f8e7d7313_esquema_inicial_uuid7.py  fc5db4ea92bd_desdoblar_importe_concesion.py
backend/api/: health.py
backend/src/bdns_portal/: __init__.py  main.py  server.py
backend/src/bdns_portal/cache/: redis_cache.py
backend/src/bdns_portal/core/: config.py
backend/src/bdns_portal/graphql/: __init__.py  schema.py
backend/src/bdns_portal/graphql/inputs/: __init__.py  beneficiario.py  catalogos.py  concesion.py  convocatoria.py
backend/src/bdns_portal/graphql/resolvers/: __init__.py  beneficiario.py  beneficiarios.py  catalogs.py  concesion.py  concesiones.py  convocatoria.py  estadisticas.py  notificaciones.py
backend/src/bdns_portal/graphql/types/: __init__.py  beneficiario.py  catalogos.py  concesion.py  convocatoria.py  estadisticas.py  notificaciones.py  pagination.py
backend/src/bdns_portal/services/: redis_cache.py
backend/src/bdns_portal/services/telegram_notifications/: README.md  __init__.py  api.py  db_setup.sql  monitor.py  notifier.py  query_builder.py
docs/: CHANGELOG_SEPARACION.md  SEPARACION_PROYECTOS.md
frontend/: .gitignore  (+10 more)
(+30 files in other folders)
