[project]
name = "bdns-api"
version = "0.1.0"
dependencies = [
    "fastapi",
    "requests",
    "uvicorn",
    "strawberry-graphql",
    "sqlalchemy",
    "python-dotenv",
    "alembic",
    "bdns_core",
 
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
